checking job finding/sep rates with a notebook

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 python/notebooks/.ipynb_checkpoints/
 python/notebooks/.ipynb_checkpoints/*
-
+python/bug/bug/__pycache__/
+python/bug/bug/__pycache__/*
