--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ python/notebooks/.ipynb_checkpoints/
 python/notebooks/.ipynb_checkpoints/*
 python/bug/bug/__pycache__/
 python/bug/bug/__pycache__/*
+*.pdf
+ReplicationFiles_pt6/
+code/.~lock*
