update path to local bug package for sys.insert

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 python/notebooks/.ipynb_checkpoints/
 python/notebooks/.ipynb_checkpoints/*
-python/bug/bug/__pycache__/
-python/bug/bug/__pycache__/*
+python/bug/__pycache__/
+python/bug/__pycache__/*
 *.pdf
 ReplicationFiles_pt6/
 code/.~lock*
